--- a/Produtos.html
+++ b/Produtos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lojinha</title>
-    <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/Produtos.css">
 </head>
 
 <body>
@@ -14,8 +14,8 @@
         <a href="#"><img src="./src/image/logo sem bg.png" alt="logo" class="logo"></a>
         <nav class="navigation">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="./Produtos.html">Produtos</a></li>
+                <li><a href="./index.html">home</a></li>
+                <li><a href="#">Produtos</a></li>
                 <li><a href="./about.html">Sobre nós</a></li>
                 <li><a href="./contato.html">Contatos</a></li>
             </ul>
@@ -36,9 +36,3 @@
     <div class="boximg">
         <img src="./src/image/Presentes.png" alt="" class="img1">
     </div>
-
-</section>
-    
-<script src="./javaScript/script.js"></script>
-</body>
-</html>
