--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lojinha</title>
-    <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/about.css">
 </head>
 
 <body>
@@ -14,9 +14,9 @@
         <a href="#"><img src="./src/image/logo sem bg.png" alt="logo" class="logo"></a>
         <nav class="navigation">
             <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="./index.html">home</a></li>
                 <li><a href="./Produtos.html">Produtos</a></li>
-                <li><a href="./about.html">Sobre nós</a></li>
+                <li><a href="#">Sobre nós</a></li>
                 <li><a href="./contato.html">Contatos</a></li>
             </ul>
         </nav>
