--- a/contato.html
+++ b/contato.html
@@ -24,8 +24,9 @@
 
     <div class="container">
         <div class="text">
-            <h2>Novos Produtos <br> <span>Disponiveis</span> </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, hic deleniti! Quo optio voluptates tenetur, odio quibusdam totam molestias voluptatem et, ipsam dolorum consectetur commodi laboriosam asperiores ipsa nostrum possimus.</p>
+            <h2>Fale <br> <span>Conosco</span> </h2>
+            <p>Estamos Aqui para Você!
+                Sua satisfação é a nossa prioridade. Entre em contato e vamos juntos celebrar com presentes artesanais únicos e inesquecíveis. 🌸</p>
             <a href="#">Veja os Produtos</a>
         </div>
     </div>
