--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
             <h2>Fale <br> <span>Conosco</span> </h2>
             <p>Estamos Aqui para Você!
                 Sua satisfação é a nossa prioridade. Entre em contato e vamos juntos celebrar com presentes artesanais únicos e inesquecíveis. 🌸</p>
-            <a href="#">Veja os Produtos</a>
+            <a href="#">Faça seu pedido</a>
         </div>
     </div>
    
