--- a/Produtos.html
+++ b/Produtos.html
@@ -9,7 +9,7 @@
 
 <body>
 <section>
-    <div class="circle"></div>
+  <!-- <div class="circle"></div>  -->  
     <header>
         <a href="#"><img src="./src/image/logo sem bg.png" alt="logo" class="logo"></a>
         <nav class="navigation">
@@ -24,15 +24,45 @@
 
     <div class="container">
         <div class="text">
-            <h2>Novos Produtos <br> <span>Disponiveis</span> </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, hic deleniti! Quo optio voluptates tenetur, odio quibusdam totam molestias voluptatem et, ipsam dolorum consectetur commodi laboriosam asperiores ipsa nostrum possimus.</p>
-            <a href="#">Veja os Produtos</a>
+            <h2>Descubra nossos produtos artesanais <br> <span>Exclusivos!</span> </h2>
+            <a href="#">Veja os Produtos</a> 
         </div>
     </div>
    
     <ul class="icons">
-        <li><a href="#"><img src="./src/image/whatsapp-logo-24.png" alt="icons"></a></li>
+<!--<li><a href="#"><img src="./src/image/whatsapp-logo-24.png" alt="icons"></a></li>-->
     </ul>
-    <div class="boximg">
-        <img src="./src/image/Presentes.png" alt="" class="img1">
+ 
+</section>
+<section class="products">
+    <div class="product" onclick="showDetails(1)">
+        <img src="./src/image/amigos.jpg" alt="Produto 1">
+        <h2>Kit de presentes.</h2>
     </div>
+    <div class="product" onclick="showDetails(2)">
+        <img src="./src/image/Dias dos pais.jpg" alt="Produto 2">
+        <h2>Kit dias dos pais.</h2>
+    </div>
+    <div class="product" onclick="showDetails(3)">
+        <img src="./src/image/Mães.jpg" alt="Produto 3">
+        <h2>Kit dias das mães.</h2>
+    </div>
+    <div class="product" onclick="showDetails(4)">
+        <img src="./src/image/Namorados.jpg" alt="Produto 4">
+        <h2>Kit dias dos namorados.</h2>
+    </div>
+    <div class="product" onclick="showDetails(5)">
+        <img src="./src/image/sabonete.jpg" alt="Produto 5">
+        <h2>Kit sabonete.</h2>
+    </div>
+    <div class="product" onclick="showDetails(6)">
+        <img src="./src/image/Pais 2.jpg" alt="Produto 6">
+        <h2>Kit Deluxe dias dos pais.</h2>
+    </div>
+</section>
+    
+
+
+<script src="./javaScript/script.js"></script>
+</body>
+</html>
