--- a/about.html
+++ b/about.html
@@ -51,5 +51,8 @@
 </section>
     
 <script src="./javaScript/script.js"></script>
+<footer>
+    <p>© 2024 Lojinha. Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
