--- a/contato.html
+++ b/contato.html
@@ -41,5 +41,8 @@
 </section>
     
 <script src="./javaScript/script.js"></script>
+<footer>
+    <p>© 2024 Lojinha. Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
