--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
 </section>
     
 <script src="./javaScript/script.js"></script>
+<footer>
+    <p>© 2024 Lojinha. Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
